Kinda fixed grid on iOS 10.2

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -18,6 +18,7 @@ $white: #FFF;
 
   img {
     width: 100%;
+    margin-bottom: 0.5em;
   }
 
   img:nth-child(odd) {
